force-app/main/default/objects/Assessment_Answer_Key__mdt/fields/Assessment_Name__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Name__c</fullName>
    <label>Assessment Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>