force-app/main/default/objects/Assessment_Answer_Key__mdt/fields/Question_Id__c.field-meta.xml
<CustomField>
    <fullName>Question_Id__c</fullName>
    <label>Question Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>